# Base

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: arena.h  base_math.h  base_time.h  linalg.h  profile.h  string8.h  typedefs.h
src/: arena_linux.c  arena_win32.c  base_time.c  profile.c  string8.c
